--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-as-range-slider",
   "version": "0.0.1",
-  "description": "react-as-range-slider",
+  "description": "一个React实现的拖动数字输入组件",
   "main": "src/index.js",
   "scripts": {
     "start": "node server.js",
@@ -35,14 +35,14 @@
   },
   "keywords": [
     "react",
-    "textarea",
-    "webpack"
+    "range",
+    "slider"
   ],
   "bugs": {
     "url": "https://github.com/LingyuCoder/react-as-range-slider/issues"
   },
   "dependencies": {
-    "react-as-dnd": "^0.1.1",
+    "react-as-dnd": "^0.1.3",
     "react-as-event-mixin": "^0.1.1",
     "react-mixin": "^1.7.0"
   }
